--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "less-middleware": "1.0.x",
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3",
-    "socket.io": "^1.2.1"
+    "socket.io": "^1.2.1",
+    "xml2js": "^0.4.4"
   }
 }
